added billing with rest
